# Django-App

./: .gitignore  Dockerfile  Makefile  Readme.md  entrypoint.sh  pyproject.toml
core/api/: filtres.py  shemas.py  urls.py
core/api/v1/: urls.py
core/api/v1/customers/: handlers.py
core/api/v1/products/: filtres.py  handlers.py  schemas.py
core/apps/common/: exceptions.py  models.py
core/apps/customers/: admin.py  models.py
core/apps/customers/entities/: entities.py
core/apps/customers/exceptions/: codes.py
core/apps/customers/migrations/: 0001_initial.py  0002_alter_customer_options_alter_customer_phone_and_more.py
core/apps/customers/services/: auth.py  codes.py  customers.py  senders.py
core/apps/products/: admin.py  containers.py
core/apps/products/entities/: products.py
core/apps/products/migrations/: 0001_initial.py
core/apps/products/models/: products.py
core/apps/products/services/: products.py
core/project/settings/: main.py
docker_compose/: app.yaml
tests/services/: test_products.py
