[tool.poetry]
name = "marketplace"
version = "0.1.0"
description = ""
authors = ["EfremovAS <Alexef3@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.4"
psycopg2-binary = "^2.9.9"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
